# mcp-server-logicmonitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.claude/skills/lm-apm/: SKILL.md
.claude/skills/lm-capacity/: SKILL.md
.claude/skills/lm-health/: SKILL.md
.claude/skills/lm-portal/: SKILL.md
.claude/skills/lm-remediate/: SKILL.md
.claude/skills/lm-triage/: SKILL.md
.github/workflows/: deploy.yml  release.yml  test.yml
contrib/eda/: README.md
contrib/eda/client/: eda.py
contrib/eda/tests/: test_eda_config.py  test_eda_registry.py
deploy/: .env.example  Caddyfile  Dockerfile  docker-compose.yml
docs/: mcp_spec.md  plan.md  todo.md
examples/playbooks/: README.md  lm-remediate-disk-cleanup.yml  lm-remediate-log-rotate.yml  lm-remediate-memory-cache-clear.yml  lm-remediate-service-restart.yml
scripts/: add-mcp-to-project.sh
src/lm_mcp/: __init__.py  analysis.py  awx_config.py  config.py  eda_config.py  exceptions.py  health.py  logging.py  registry.py  server.py  session.py  validation.py
tests/: __init__.py  conftest.py  test_analysis.py  test_awx_config.py  test_awx_dispatch.py  test_awx_registry.py  test_config.py  test_eda_dispatch.py  test_exceptions.py  test_execute_tool.py  test_filter_sanitization.py  test_foundation.py  test_health.py  test_http_analysis.py  test_http_middleware.py  test_registry.py  test_request_logging.py  test_sanitize_filter_gaps.py  test_server.py  test_session.py  test_session_persistence.py  test_skill_structure.py  test_tool_filtering.py  test_transport.py  test_validation.py  test_write_audit.py
tests/test_auth/: __init__.py  test_bearer.py  test_factory.py  test_lmv1.py
tests/test_client/: __init__.py  test_api.py  test_awx.py  test_eda.py  test_retry.py
tests/test_completions/: __init__.py  test_handlers.py  test_server_integration.py
tests/test_integration/: __init__.py  test_full_suite.py
tests/test_logging/: __init__.py  test_events.py
tests/test_prompts/: __init__.py  test_registry.py
tests/test_resources/: __init__.py  test_examples.py  test_registry.py
tests/test_tools/: __init__.py  test_action_chains.py  test_action_rules.py  test_admin.py  test_alert_rules.py  test_alert_rules_crud.py  test_alerts.py  test_alerts_integration.py  test_ansible.py  test_audit.py  test_baselines.py  test_batchjobs.py  test_collector_groups.py  test_collectors.py  test_correlation.py  test_cost.py  test_dashboard_groups.py  test_dashboards.py  test_datasources.py  test_devices.py  test_diagnosticsources.py  test_eda.py  test_error_handling.py  test_escalations.py  test_escalations_crud.py  test_event_correlation.py  test_forecasting.py  test_helpers.py  test_imports.py  test_ingestion.py  test_logimodules.py  test_logsources.py  test_metric_presets.py  test_metrics.py  test_netscans.py  test_ops.py  test_pagination_edges.py  test_remediationsources.py  test_reports.py  test_resources.py  (+14 more)
(+82 files in other folders)
