[project]
name = "lm-mcp"
version = "1.1.0"
description = "MCP server for LogicMonitor platform API integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ryan Matuszewski", email = "ryan.matuszewski@logicmonitor.com" }
]
keywords = ["logicmonitor", "mcp", "model-context-protocol", "monitoring", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
http = [
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/ryanmat/mcp-server-logicmonitor"
Repository = "https://github.com/ryanmat/mcp-server-logicmonitor"
Issues = "https://github.com/ryanmat/mcp-server-logicmonitor/issues"

[project.scripts]
lm-mcp-server = "lm_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["lm_mcp"]
